apps/kustomize-first/first-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first
  labels:
    app.kubernetes.io/name: first
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: first
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: first
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: first
          image: hashicorp/http-echo
          imagePullPolicy: IfNotPresent
          args:
            - -listen=:3000
            - -text=first
          ports:
            - name: app-port
              containerPort: 3000
          resources:
            requests:
              cpu: 0.125
              memory: 50Mi
