apps/kustomize-first/first-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: first
  labels:
    app.kubernetes.io/name: first
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: first
  ports:
    - name: svc-port
      port: 80
      targetPort: app-port
      protocol: TCP
